fix event info display on mobile

--- a/src/components/event-info/index.module.scss
+++ b/src/components/event-info/index.module.scss
@@ -19,9 +19,12 @@
   animation-duration: 1s;
 
   @media(max-width: 768px) {
-    top: 10px !important;
+    top: 100px !important;
     left: 10px !important;
     width: calc(100vw - 20px);
+    position: fixed;
+    max-height: calc(100vh - 120px);
+    overflow: auto;
   }
 
   .header {
