--- a/src/styles/general.module.scss
+++ b/src/styles/general.module.scss
@@ -145,7 +145,7 @@
     min-height: 35px;
 
     :global(.fa) {
-      margin-top: 5px;
+      margin-top: 6px;
     }
 
     &:global(.add) {
